fixed header and spacing issues

--- a/climate-crisis-story/style.css
+++ b/climate-crisis-story/style.css
@@ -8,10 +8,24 @@
   font-family: 'Georgia', serif;
   font-weight: 700;
   text-decoration-color: #fff;
-  font-size: 2em;
+  font-size: 1em;
   text-align: center;
 }
 
+.overlay {
+  position:absolute;
+  top:10%;
+  width:100%;
+  background-color:#ffffff;
+  opacity:.7;
+}
+
+.hero-hed {
+  font-family: 'Georgia', serif;
+  font-size: 4em;
+  color: #000000;
+  font-weight: 700;
+}
 
 
 
@@ -19,7 +33,7 @@
   color:#f23030;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 1.5em;
   text-align: center;
 }
 
@@ -43,7 +57,7 @@
 
 .hero-sub {
   font-family: 'Montserrat', sans-serif;
-  font-size:0.5em;
+  font-size:0.9em;
   text-align: center;
 }
 
@@ -135,7 +149,8 @@ h2 {
   font-size: 2em;
   font-weight: 500;
   text-align: left;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
+  padding-top: 20px;
   color:#FFA500;
 
 }
@@ -174,3 +189,5 @@ footer {
   padding: 3px;
   background-color: Black;
   color: white;
+  font-size: 0.5em;
+  font-style: italic;
